[gd_scene load_steps=23 format=3 uid="uid://3en8k3fm06er"]

[ext_resource type="Script" path="res://src/player.gd" id="1_rht2w"]
[ext_resource type="Texture2D" uid="uid://dn46i1i4pw44a" path="res://images/Player.png" id="2_fussk"]
[ext_resource type="Shader" path="res://images/acceleration.gdshader" id="2_om7co"]
[ext_resource type="PackedScene" uid="uid://bjic8asgxl34p" path="res://src/gun.tscn" id="3_s8hby"]
[ext_resource type="Script" path="res://src/gun.gd" id="5_lga3u"]
[ext_resource type="Texture2D" uid="uid://b8jci1vvkfnji" path="res://images/Gun.png" id="6_6gydu"]
[ext_resource type="Texture2D" uid="uid://b70vpjhsgt087" path="res://images/Muzzle.png" id="7_lanpq"]
[ext_resource type="AudioStream" uid="uid://c761jx1m4hha6" path="res://sound/sfx/高速移動.mp3" id="8_cj82m"]
[ext_resource type="AudioStream" uid="uid://bg5jlun4mokym" path="res://sound/sfx/拳銃を撃つ.mp3" id="9_owxdg"]
[ext_resource type="AudioStream" uid="uid://bdlln17daaj8o" path="res://sound/sfx/ゾンビの食事.mp3" id="10_p4mw3"]
[ext_resource type="AudioStream" uid="uid://cdcwb7x2w32pe" path="res://sound/sfx/弓矢が刺さる.mp3" id="11_if6ua"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yd2au"]
shader = ExtResource("2_om7co")
shader_parameter/opacity = 0.0
shader_parameter/r = null
shader_parameter/g = null
shader_parameter/b = null
shader_parameter/mix_color = null

[sub_resource type="CircleShape2D" id="CircleShape2D_mxqkn"]
radius = 42.107

[sub_resource type="Animation" id="Animation_bnb8f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShootingPoint/Muzzle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pistol:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, -59)]
}

[sub_resource type="Animation" id="Animation_ntn73"]
resource_name = "shoot"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShootingPoint/Muzzle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pistol:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(7, -59), Vector2(17, -59)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4s7wd"]
_data = {
"RESET": SubResource("Animation_bnb8f"),
"shoot": SubResource("Animation_ntn73")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_s2a4o"]
radius = 61.0328

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikk48"]
bg_color = Color(0.333333, 0.0588235, 0.0392157, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gwqmc"]
bg_color = Color(0.223529, 0.341176, 0.109804, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id="Animation_mjveo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Gun:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6qa80"]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.607843, 0.101961, 0.0392157, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Gun:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.607843, 0.101961, 0.0392157, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_176l3"]
_data = {
"RESET": SubResource("Animation_mjveo"),
"hurt": SubResource("Animation_6qa80")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_rht2w")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, -4)
rotation = 1.5708
texture = ExtResource("2_fussk")

[node name="Dash" type="Sprite2D" parent="."]
z_index = -1
material = SubResource("ShaderMaterial_yd2au")
position = Vector2(2, -4)
rotation = 1.5708
texture = ExtResource("2_fussk")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.498039)
z_index = -2
position = Vector2(2, -4)
rotation = 1.5708
texture = ExtResource("2_fussk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mxqkn")

[node name="Gun" parent="." instance=ExtResource("3_s8hby")]

[node name="Gun2" type="Marker2D" parent="."]
visible = false
show_behind_parent = true
script = ExtResource("5_lga3u")

[node name="Pistol" type="Sprite2D" parent="Gun2"]
position = Vector2(17, -59)
rotation = 1.5708
texture = ExtResource("6_6gydu")

[node name="ShootingPoint" type="Marker2D" parent="Gun2"]
position = Vector2(56, -59)

[node name="Muzzle" type="Sprite2D" parent="Gun2/ShootingPoint"]
visible = false
position = Vector2(12, 0)
rotation = -1.5708
scale = Vector2(2, 2)
texture = ExtResource("7_lanpq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Gun2"]
libraries = {
"": SubResource("AnimationLibrary_4s7wd")
}

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_s2a4o")

[node name="HealthBar" type="ProgressBar" parent="."]
visible = false
z_index = 5
offset_left = -75.0
offset_top = -100.0
offset_right = 125.0
offset_bottom = -80.0
rotation = 1.5708
theme_override_styles/background = SubResource("StyleBoxFlat_ikk48")
theme_override_styles/fill = SubResource("StyleBoxFlat_gwqmc")
value = 100.0
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_176l3")
}

[node name="ASPDash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_cj82m")
bus = &"SFX"

[node name="ASPShoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_owxdg")
pitch_scale = 4.0
bus = &"SFX"

[node name="ASPSlimeMunching" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_p4mw3")
bus = &"SFX"

[node name="ASPSelfShot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_if6ua")
bus = &"SFX"

[connection signal="finished" from="ASPSlimeMunching" to="." method="_on_asp_slime_munching_finished"]
